# leper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: _fixes.hpp.F3CDEEF9B993D261.idx  _vectorize.hpp.FCA2C99CE61A1466.idx  common.hpp.673401E6CDA0934F.idx  compute_common.hpp.23AFCA18712B3614.idx  compute_vector_decl.hpp.3E81CEB573B670EC.idx  compute_vector_relational.hpp.505587BB4C27185E.idx  constants.hpp.B53775D6C04B50D2.idx  constants.inl.64230F58B55C237E.idx  context.c.DFD3A7BD8934F3B1.idx  dual_quaternion.hpp.8CCDAD27EDB26377.idx  dual_quaternion.inl.83B6EBE7A632190B.idx  egl_context.c.B6AEEEF8FBC8F3B5.idx  epsilon.hpp.BB4FE650A39DCD11.idx  epsilon.inl.C24F64D53E24B4A0.idx  exponential.hpp.E66665C57C08DD0F.idx  func_common.inl.95C8C73BA4D5AF2E.idx  func_exponential.inl.E043526E744234D7.idx  func_geometric.inl.70B60ACE8C74DF4A.idx  func_integer.inl.213560943C5BF8E0.idx  func_matrix.inl.0202811A7F1B6F56.idx  (+204 more)
include/glad/: glad.h
include/leper/: leper_common_types.h  leper_ecs_components.h  leper_ecs_types.h  leper_geometry_types.h  leper_material_to_shader_files.h  leper_rendering_constants.h  leper_rendering_types.h
resources/shaders/: basic.frag.glsl  basic.vert.glsl  depth.vert.glsl  simple.frag.glsl  simple.vert.glsl  toon.frag.glsl  toon.vert.glsl  trail.frag.glsl  trail.vert.glsl
src/: main.cpp
src/asset_loading/: obj_loading.cpp  obj_loading.h
src/ecs/: component_array.cpp  component_array.h  ecs.cpp  ecs.h
src/glad/: glad.c
src/renderer/: renderer.cpp  renderer.h
src/utils/: id_utils.h
(+7 files in other folders)
